# UnidbgTraceViewer

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: perf-guidelines.mdc  project-structure-tools-split.mdc  project-structure.mdc  trace-viewer-usage.mdc  unidbg-trace-context.mdc
trace_viewer/: README.md  __init__.py  app.py  decoders.py  mem_diff.py  sqlite_cache.py  trace_parser.py  utils.py  value_flow.py  widgets.py  workers.py
