[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unidbg-trace-tools"
version = "0.1.0"
description = "Unidbg trace viewer and analysis tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PyQt5>=5.15.2"]

[project.scripts]
trace-viewer = "trace_viewer.app:main"
